backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> simple_statement
Rule 5     statement -> compound_statement
Rule 6     simple_statement -> expression_statement
Rule 7     simple_statement -> assignment_statement
Rule 8     simple_statement -> return_statement
Rule 9     simple_statement -> NEWLINE
Rule 10    expression_statement -> expression NEWLINE
Rule 11    expression_statement -> call NEWLINE
Rule 12    expression_statement -> ID LPAREN arguments RPAREN NEWLINE
Rule 13    expression_statement -> ID LPAREN RPAREN NEWLINE
Rule 14    assignment_statement -> ID ASSIGN expression NEWLINE
Rule 15    assignment_statement -> ID ASSIGN list_literal NEWLINE
Rule 16    return_statement -> KEYWORD expression NEWLINE
Rule 17    return_statement -> KEYWORD NEWLINE
Rule 18    compound_statement -> function_def
Rule 19    compound_statement -> if_statement
Rule 20    compound_statement -> for_statement
Rule 21    compound_statement -> while_statement
Rule 22    function_def -> KEYWORD ID LPAREN parameter_list RPAREN return_type COLON NEWLINE INDENT statement_list DEDENT
Rule 23    function_def -> KEYWORD ID LPAREN parameter_list RPAREN return_type NEWLINE INDENT statement_list DEDENT
Rule 24    parameter_list -> parameter
Rule 25    parameter_list -> parameter_list COMMA parameter
Rule 26    parameter -> ID COLON ID
Rule 27    parameter -> ID
Rule 28    type -> ID
Rule 29    if_statement -> KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT
Rule 30    if_statement -> KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT KEYWORD COLON NEWLINE INDENT statement_list DEDENT
Rule 31    for_statement -> KEYWORD ID KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT
Rule 32    while_statement -> KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT
Rule 33    expression -> STRING
Rule 34    expression -> binary_expression
Rule 35    expression -> primary_expression
Rule 36    expression -> NUMBER
Rule 37    expression -> list_literal
Rule 38    expression -> FSTRING
Rule 39    binary_expression -> unary_expression
Rule 40    binary_expression -> binary_expression PLUS unary_expression
Rule 41    binary_expression -> binary_expression MINUS unary_expression
Rule 42    binary_expression -> binary_expression TIMES unary_expression
Rule 43    binary_expression -> binary_expression DIVIDE unary_expression
Rule 44    binary_expression -> binary_expression MOD unary_expression
Rule 45    binary_expression -> binary_expression EQ unary_expression
Rule 46    binary_expression -> binary_expression NE unary_expression
Rule 47    binary_expression -> binary_expression LT unary_expression
Rule 48    binary_expression -> binary_expression GT unary_expression
Rule 49    binary_expression -> binary_expression LE unary_expression
Rule 50    binary_expression -> binary_expression GE unary_expression
Rule 51    unary_expression -> primary_expression
Rule 52    unary_expression -> MINUS unary_expression
Rule 53    primary_expression -> literal
Rule 54    primary_expression -> ID
Rule 55    primary_expression -> call
Rule 56    primary_expression -> group
Rule 57    primary_expression -> list_literal
Rule 58    literal -> NUMBER
Rule 59    literal -> STRING
Rule 60    group -> LPAREN expression RPAREN
Rule 61    call -> ID LPAREN arguments RPAREN
Rule 62    call -> ID LPAREN RPAREN
Rule 63    arguments -> expression
Rule 64    arguments -> arguments COMMA expression
Rule 65    arguments -> STRING
Rule 66    arguments -> arguments COMMA STRING
Rule 67    arguments -> arguments COMMA
Rule 68    return_type -> ARROW ID
Rule 69    return_type -> empty
Rule 70    empty -> <empty>
Rule 71    list_literal -> LBRACKET list_items RBRACKET
Rule 72    list_items -> expression
Rule 73    list_items -> list_items COMMA expression
Rule 74    list_items -> empty
Rule 75    function_def -> KEYWORD ID LPAREN parameter_list RPAREN return_type COLON NEWLINE statement_list

Terminals, with rules where they appear

ARROW                : 68
ASSIGN               : 14 15
COLON                : 22 26 29 30 30 31 32 75
COMMA                : 25 64 66 67 73
DEDENT               : 22 23 29 30 30 31 32
DIVIDE               : 43
EQ                   : 45
FSTRING              : 38
GE                   : 50
GT                   : 48
ID                   : 12 13 14 15 22 23 26 26 27 28 31 54 61 62 68 75
INDENT               : 22 23 29 30 30 31 32
KEYWORD              : 16 17 22 23 29 30 30 31 31 32 75
LBRACKET             : 71
LE                   : 49
LPAREN               : 12 13 22 23 60 61 62 75
LT                   : 47
MINUS                : 41 52
MOD                  : 44
NE                   : 46
NEWLINE              : 9 10 11 12 13 14 15 16 17 22 23 29 30 30 31 32 75
NUMBER               : 36 58
PLUS                 : 40
RBRACKET             : 71
RPAREN               : 12 13 22 23 60 61 62 75
STRING               : 33 59 65 66
TIMES                : 42
error                : 

Nonterminals, with rules where they appear

arguments            : 12 61 64 66 67
assignment_statement : 7
binary_expression    : 34 40 41 42 43 44 45 46 47 48 49 50
call                 : 11 55
compound_statement   : 5
empty                : 69 74
expression           : 10 14 16 29 30 31 32 60 63 64 72 73
expression_statement : 6
for_statement        : 20
function_def         : 18
group                : 56
if_statement         : 19
list_items           : 71 73
list_literal         : 15 37 57
literal              : 53
parameter            : 24 25
parameter_list       : 22 23 25 75
primary_expression   : 35 51
program              : 0
return_statement     : 8
return_type          : 22 23 75
simple_statement     : 4
statement            : 2 3
statement_list       : 1 3 22 23 29 30 30 31 32 75
type                 : 
unary_expression     : 39 40 41 42 43 44 45 46 47 48 49 50 52
while_statement      : 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . simple_statement
    (5) statement -> . compound_statement
    (6) simple_statement -> . expression_statement
    (7) simple_statement -> . assignment_statement
    (8) simple_statement -> . return_statement
    (9) simple_statement -> . NEWLINE
    (18) compound_statement -> . function_def
    (19) compound_statement -> . if_statement
    (20) compound_statement -> . for_statement
    (21) compound_statement -> . while_statement
    (10) expression_statement -> . expression NEWLINE
    (11) expression_statement -> . call NEWLINE
    (12) expression_statement -> . ID LPAREN arguments RPAREN NEWLINE
    (13) expression_statement -> . ID LPAREN RPAREN NEWLINE
    (14) assignment_statement -> . ID ASSIGN expression NEWLINE
    (15) assignment_statement -> . ID ASSIGN list_literal NEWLINE
    (16) return_statement -> . KEYWORD expression NEWLINE
    (17) return_statement -> . KEYWORD NEWLINE
    (22) function_def -> . KEYWORD ID LPAREN parameter_list RPAREN return_type COLON NEWLINE INDENT statement_list DEDENT
    (23) function_def -> . KEYWORD ID LPAREN parameter_list RPAREN return_type NEWLINE INDENT statement_list DEDENT
    (75) function_def -> . KEYWORD ID LPAREN parameter_list RPAREN return_type COLON NEWLINE statement_list
    (29) if_statement -> . KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT
    (30) if_statement -> . KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT KEYWORD COLON NEWLINE INDENT statement_list DEDENT
    (31) for_statement -> . KEYWORD ID KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT
    (32) while_statement -> . KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT
    (33) expression -> . STRING
    (34) expression -> . binary_expression
    (35) expression -> . primary_expression
    (36) expression -> . NUMBER
    (37) expression -> . list_literal
    (38) expression -> . FSTRING
    (61) call -> . ID LPAREN arguments RPAREN
    (62) call -> . ID LPAREN RPAREN
    (39) binary_expression -> . unary_expression
    (40) binary_expression -> . binary_expression PLUS unary_expression
    (41) binary_expression -> . binary_expression MINUS unary_expression
    (42) binary_expression -> . binary_expression TIMES unary_expression
    (43) binary_expression -> . binary_expression DIVIDE unary_expression
    (44) binary_expression -> . binary_expression MOD unary_expression
    (45) binary_expression -> . binary_expression EQ unary_expression
    (46) binary_expression -> . binary_expression NE unary_expression
    (47) binary_expression -> . binary_expression LT unary_expression
    (48) binary_expression -> . binary_expression GT unary_expression
    (49) binary_expression -> . binary_expression LE unary_expression
    (50) binary_expression -> . binary_expression GE unary_expression
    (53) primary_expression -> . literal
    (54) primary_expression -> . ID
    (55) primary_expression -> . call
    (56) primary_expression -> . group
    (57) primary_expression -> . list_literal
    (71) list_literal -> . LBRACKET list_items RBRACKET
    (51) unary_expression -> . primary_expression
    (52) unary_expression -> . MINUS unary_expression
    (58) literal -> . NUMBER
    (59) literal -> . STRING
    (60) group -> . LPAREN expression RPAREN

    NEWLINE         shift and go to state 9
    ID              shift and go to state 16
    KEYWORD         shift and go to state 19
    STRING          shift and go to state 20
    NUMBER          shift and go to state 23
    FSTRING         shift and go to state 24
    LBRACKET        shift and go to state 29
    MINUS           shift and go to state 26
    LPAREN          shift and go to state 17

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    simple_statement               shift and go to state 4
    compound_statement             shift and go to state 5
    expression_statement           shift and go to state 6
    assignment_statement           shift and go to state 7
    return_statement               shift and go to state 8
    function_def                   shift and go to state 10
    if_statement                   shift and go to state 11
    for_statement                  shift and go to state 12
    while_statement                shift and go to state 13
    expression                     shift and go to state 14
    call                           shift and go to state 15
    list_literal                   shift and go to state 18
    binary_expression              shift and go to state 21
    primary_expression             shift and go to state 22
    unary_expression               shift and go to state 25
    literal                        shift and go to state 27
    group                          shift and go to state 28

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . simple_statement
    (5) statement -> . compound_statement
    (6) simple_statement -> . expression_statement
    (7) simple_statement -> . assignment_statement
    (8) simple_statement -> . return_statement
    (9) simple_statement -> . NEWLINE
    (18) compound_statement -> . function_def
    (19) compound_statement -> . if_statement
    (20) compound_statement -> . for_statement
    (21) compound_statement -> . while_statement
    (10) expression_statement -> . expression NEWLINE
    (11) expression_statement -> . call NEWLINE
    (12) expression_statement -> . ID LPAREN arguments RPAREN NEWLINE
    (13) expression_statement -> . ID LPAREN RPAREN NEWLINE
    (14) assignment_statement -> . ID ASSIGN expression NEWLINE
    (15) assignment_statement -> . ID ASSIGN list_literal NEWLINE
    (16) return_statement -> . KEYWORD expression NEWLINE
    (17) return_statement -> . KEYWORD NEWLINE
    (22) function_def -> . KEYWORD ID LPAREN parameter_list RPAREN return_type COLON NEWLINE INDENT statement_list DEDENT
    (23) function_def -> . KEYWORD ID LPAREN parameter_list RPAREN return_type NEWLINE INDENT statement_list DEDENT
    (75) function_def -> . KEYWORD ID LPAREN parameter_list RPAREN return_type COLON NEWLINE statement_list
    (29) if_statement -> . KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT
    (30) if_statement -> . KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT KEYWORD COLON NEWLINE INDENT statement_list DEDENT
    (31) for_statement -> . KEYWORD ID KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT
    (32) while_statement -> . KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT
    (33) expression -> . STRING
    (34) expression -> . binary_expression
    (35) expression -> . primary_expression
    (36) expression -> . NUMBER
    (37) expression -> . list_literal
    (38) expression -> . FSTRING
    (61) call -> . ID LPAREN arguments RPAREN
    (62) call -> . ID LPAREN RPAREN
    (39) binary_expression -> . unary_expression
    (40) binary_expression -> . binary_expression PLUS unary_expression
    (41) binary_expression -> . binary_expression MINUS unary_expression
    (42) binary_expression -> . binary_expression TIMES unary_expression
    (43) binary_expression -> . binary_expression DIVIDE unary_expression
    (44) binary_expression -> . binary_expression MOD unary_expression
    (45) binary_expression -> . binary_expression EQ unary_expression
    (46) binary_expression -> . binary_expression NE unary_expression
    (47) binary_expression -> . binary_expression LT unary_expression
    (48) binary_expression -> . binary_expression GT unary_expression
    (49) binary_expression -> . binary_expression LE unary_expression
    (50) binary_expression -> . binary_expression GE unary_expression
    (53) primary_expression -> . literal
    (54) primary_expression -> . ID
    (55) primary_expression -> . call
    (56) primary_expression -> . group
    (57) primary_expression -> . list_literal
    (71) list_literal -> . LBRACKET list_items RBRACKET
    (51) unary_expression -> . primary_expression
    (52) unary_expression -> . MINUS unary_expression
    (58) literal -> . NUMBER
    (59) literal -> . STRING
    (60) group -> . LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    NEWLINE         shift and go to state 9
    ID              shift and go to state 16
    KEYWORD         shift and go to state 19
    STRING          shift and go to state 20
    NUMBER          shift and go to state 23
    FSTRING         shift and go to state 24
    LBRACKET        shift and go to state 29
    MINUS           shift and go to state 26
    LPAREN          shift and go to state 17

    statement                      shift and go to state 30
    simple_statement               shift and go to state 4
    compound_statement             shift and go to state 5
    expression_statement           shift and go to state 6
    assignment_statement           shift and go to state 7
    return_statement               shift and go to state 8
    function_def                   shift and go to state 10
    if_statement                   shift and go to state 11
    for_statement                  shift and go to state 12
    while_statement                shift and go to state 13
    expression                     shift and go to state 14
    call                           shift and go to state 15
    list_literal                   shift and go to state 18
    binary_expression              shift and go to state 21
    primary_expression             shift and go to state 22
    unary_expression               shift and go to state 25
    literal                        shift and go to state 27
    group                          shift and go to state 28

state 3

    (2) statement_list -> statement .

    NEWLINE         reduce using rule 2 (statement_list -> statement .)
    ID              reduce using rule 2 (statement_list -> statement .)
    KEYWORD         reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    NUMBER          reduce using rule 2 (statement_list -> statement .)
    FSTRING         reduce using rule 2 (statement_list -> statement .)
    LBRACKET        reduce using rule 2 (statement_list -> statement .)
    MINUS           reduce using rule 2 (statement_list -> statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    DEDENT          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> simple_statement .

    NEWLINE         reduce using rule 4 (statement -> simple_statement .)
    ID              reduce using rule 4 (statement -> simple_statement .)
    KEYWORD         reduce using rule 4 (statement -> simple_statement .)
    STRING          reduce using rule 4 (statement -> simple_statement .)
    NUMBER          reduce using rule 4 (statement -> simple_statement .)
    FSTRING         reduce using rule 4 (statement -> simple_statement .)
    LBRACKET        reduce using rule 4 (statement -> simple_statement .)
    MINUS           reduce using rule 4 (statement -> simple_statement .)
    LPAREN          reduce using rule 4 (statement -> simple_statement .)
    $end            reduce using rule 4 (statement -> simple_statement .)
    DEDENT          reduce using rule 4 (statement -> simple_statement .)


state 5

    (5) statement -> compound_statement .

    NEWLINE         reduce using rule 5 (statement -> compound_statement .)
    ID              reduce using rule 5 (statement -> compound_statement .)
    KEYWORD         reduce using rule 5 (statement -> compound_statement .)
    STRING          reduce using rule 5 (statement -> compound_statement .)
    NUMBER          reduce using rule 5 (statement -> compound_statement .)
    FSTRING         reduce using rule 5 (statement -> compound_statement .)
    LBRACKET        reduce using rule 5 (statement -> compound_statement .)
    MINUS           reduce using rule 5 (statement -> compound_statement .)
    LPAREN          reduce using rule 5 (statement -> compound_statement .)
    $end            reduce using rule 5 (statement -> compound_statement .)
    DEDENT          reduce using rule 5 (statement -> compound_statement .)


state 6

    (6) simple_statement -> expression_statement .

    NEWLINE         reduce using rule 6 (simple_statement -> expression_statement .)
    ID              reduce using rule 6 (simple_statement -> expression_statement .)
    KEYWORD         reduce using rule 6 (simple_statement -> expression_statement .)
    STRING          reduce using rule 6 (simple_statement -> expression_statement .)
    NUMBER          reduce using rule 6 (simple_statement -> expression_statement .)
    FSTRING         reduce using rule 6 (simple_statement -> expression_statement .)
    LBRACKET        reduce using rule 6 (simple_statement -> expression_statement .)
    MINUS           reduce using rule 6 (simple_statement -> expression_statement .)
    LPAREN          reduce using rule 6 (simple_statement -> expression_statement .)
    $end            reduce using rule 6 (simple_statement -> expression_statement .)
    DEDENT          reduce using rule 6 (simple_statement -> expression_statement .)


state 7

    (7) simple_statement -> assignment_statement .

    NEWLINE         reduce using rule 7 (simple_statement -> assignment_statement .)
    ID              reduce using rule 7 (simple_statement -> assignment_statement .)
    KEYWORD         reduce using rule 7 (simple_statement -> assignment_statement .)
    STRING          reduce using rule 7 (simple_statement -> assignment_statement .)
    NUMBER          reduce using rule 7 (simple_statement -> assignment_statement .)
    FSTRING         reduce using rule 7 (simple_statement -> assignment_statement .)
    LBRACKET        reduce using rule 7 (simple_statement -> assignment_statement .)
    MINUS           reduce using rule 7 (simple_statement -> assignment_statement .)
    LPAREN          reduce using rule 7 (simple_statement -> assignment_statement .)
    $end            reduce using rule 7 (simple_statement -> assignment_statement .)
    DEDENT          reduce using rule 7 (simple_statement -> assignment_statement .)


state 8

    (8) simple_statement -> return_statement .

    NEWLINE         reduce using rule 8 (simple_statement -> return_statement .)
    ID              reduce using rule 8 (simple_statement -> return_statement .)
    KEYWORD         reduce using rule 8 (simple_statement -> return_statement .)
    STRING          reduce using rule 8 (simple_statement -> return_statement .)
    NUMBER          reduce using rule 8 (simple_statement -> return_statement .)
    FSTRING         reduce using rule 8 (simple_statement -> return_statement .)
    LBRACKET        reduce using rule 8 (simple_statement -> return_statement .)
    MINUS           reduce using rule 8 (simple_statement -> return_statement .)
    LPAREN          reduce using rule 8 (simple_statement -> return_statement .)
    $end            reduce using rule 8 (simple_statement -> return_statement .)
    DEDENT          reduce using rule 8 (simple_statement -> return_statement .)


state 9

    (9) simple_statement -> NEWLINE .

    NEWLINE         reduce using rule 9 (simple_statement -> NEWLINE .)
    ID              reduce using rule 9 (simple_statement -> NEWLINE .)
    KEYWORD         reduce using rule 9 (simple_statement -> NEWLINE .)
    STRING          reduce using rule 9 (simple_statement -> NEWLINE .)
    NUMBER          reduce using rule 9 (simple_statement -> NEWLINE .)
    FSTRING         reduce using rule 9 (simple_statement -> NEWLINE .)
    LBRACKET        reduce using rule 9 (simple_statement -> NEWLINE .)
    MINUS           reduce using rule 9 (simple_statement -> NEWLINE .)
    LPAREN          reduce using rule 9 (simple_statement -> NEWLINE .)
    $end            reduce using rule 9 (simple_statement -> NEWLINE .)
    DEDENT          reduce using rule 9 (simple_statement -> NEWLINE .)


state 10

    (18) compound_statement -> function_def .

    NEWLINE         reduce using rule 18 (compound_statement -> function_def .)
    ID              reduce using rule 18 (compound_statement -> function_def .)
    KEYWORD         reduce using rule 18 (compound_statement -> function_def .)
    STRING          reduce using rule 18 (compound_statement -> function_def .)
    NUMBER          reduce using rule 18 (compound_statement -> function_def .)
    FSTRING         reduce using rule 18 (compound_statement -> function_def .)
    LBRACKET        reduce using rule 18 (compound_statement -> function_def .)
    MINUS           reduce using rule 18 (compound_statement -> function_def .)
    LPAREN          reduce using rule 18 (compound_statement -> function_def .)
    $end            reduce using rule 18 (compound_statement -> function_def .)
    DEDENT          reduce using rule 18 (compound_statement -> function_def .)


state 11

    (19) compound_statement -> if_statement .

    NEWLINE         reduce using rule 19 (compound_statement -> if_statement .)
    ID              reduce using rule 19 (compound_statement -> if_statement .)
    KEYWORD         reduce using rule 19 (compound_statement -> if_statement .)
    STRING          reduce using rule 19 (compound_statement -> if_statement .)
    NUMBER          reduce using rule 19 (compound_statement -> if_statement .)
    FSTRING         reduce using rule 19 (compound_statement -> if_statement .)
    LBRACKET        reduce using rule 19 (compound_statement -> if_statement .)
    MINUS           reduce using rule 19 (compound_statement -> if_statement .)
    LPAREN          reduce using rule 19 (compound_statement -> if_statement .)
    $end            reduce using rule 19 (compound_statement -> if_statement .)
    DEDENT          reduce using rule 19 (compound_statement -> if_statement .)


state 12

    (20) compound_statement -> for_statement .

    NEWLINE         reduce using rule 20 (compound_statement -> for_statement .)
    ID              reduce using rule 20 (compound_statement -> for_statement .)
    KEYWORD         reduce using rule 20 (compound_statement -> for_statement .)
    STRING          reduce using rule 20 (compound_statement -> for_statement .)
    NUMBER          reduce using rule 20 (compound_statement -> for_statement .)
    FSTRING         reduce using rule 20 (compound_statement -> for_statement .)
    LBRACKET        reduce using rule 20 (compound_statement -> for_statement .)
    MINUS           reduce using rule 20 (compound_statement -> for_statement .)
    LPAREN          reduce using rule 20 (compound_statement -> for_statement .)
    $end            reduce using rule 20 (compound_statement -> for_statement .)
    DEDENT          reduce using rule 20 (compound_statement -> for_statement .)


state 13

    (21) compound_statement -> while_statement .

    NEWLINE         reduce using rule 21 (compound_statement -> while_statement .)
    ID              reduce using rule 21 (compound_statement -> while_statement .)
    KEYWORD         reduce using rule 21 (compound_statement -> while_statement .)
    STRING          reduce using rule 21 (compound_statement -> while_statement .)
    NUMBER          reduce using rule 21 (compound_statement -> while_statement .)
    FSTRING         reduce using rule 21 (compound_statement -> while_statement .)
    LBRACKET        reduce using rule 21 (compound_statement -> while_statement .)
    MINUS           reduce using rule 21 (compound_statement -> while_statement .)
    LPAREN          reduce using rule 21 (compound_statement -> while_statement .)
    $end            reduce using rule 21 (compound_statement -> while_statement .)
    DEDENT          reduce using rule 21 (compound_statement -> while_statement .)


state 14

    (10) expression_statement -> expression . NEWLINE

    NEWLINE         shift and go to state 31


state 15

    (11) expression_statement -> call . NEWLINE
    (55) primary_expression -> call .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 32
    PLUS            reduce using rule 55 (primary_expression -> call .)
    MINUS           reduce using rule 55 (primary_expression -> call .)
    TIMES           reduce using rule 55 (primary_expression -> call .)
    DIVIDE          reduce using rule 55 (primary_expression -> call .)
    MOD             reduce using rule 55 (primary_expression -> call .)
    EQ              reduce using rule 55 (primary_expression -> call .)
    NE              reduce using rule 55 (primary_expression -> call .)
    LT              reduce using rule 55 (primary_expression -> call .)
    GT              reduce using rule 55 (primary_expression -> call .)
    LE              reduce using rule 55 (primary_expression -> call .)
    GE              reduce using rule 55 (primary_expression -> call .)

  ! NEWLINE         [ reduce using rule 55 (primary_expression -> call .) ]


state 16

    (12) expression_statement -> ID . LPAREN arguments RPAREN NEWLINE
    (13) expression_statement -> ID . LPAREN RPAREN NEWLINE
    (14) assignment_statement -> ID . ASSIGN expression NEWLINE
    (15) assignment_statement -> ID . ASSIGN list_literal NEWLINE
    (61) call -> ID . LPAREN arguments RPAREN
    (62) call -> ID . LPAREN RPAREN
    (54) primary_expression -> ID .

    LPAREN          shift and go to state 33
    ASSIGN          shift and go to state 34
    NEWLINE         reduce using rule 54 (primary_expression -> ID .)
    PLUS            reduce using rule 54 (primary_expression -> ID .)
    MINUS           reduce using rule 54 (primary_expression -> ID .)
    TIMES           reduce using rule 54 (primary_expression -> ID .)
    DIVIDE          reduce using rule 54 (primary_expression -> ID .)
    MOD             reduce using rule 54 (primary_expression -> ID .)
    EQ              reduce using rule 54 (primary_expression -> ID .)
    NE              reduce using rule 54 (primary_expression -> ID .)
    LT              reduce using rule 54 (primary_expression -> ID .)
    GT              reduce using rule 54 (primary_expression -> ID .)
    LE              reduce using rule 54 (primary_expression -> ID .)
    GE              reduce using rule 54 (primary_expression -> ID .)


state 17

    (60) group -> LPAREN . expression RPAREN
    (33) expression -> . STRING
    (34) expression -> . binary_expression
    (35) expression -> . primary_expression
    (36) expression -> . NUMBER
    (37) expression -> . list_literal
    (38) expression -> . FSTRING
    (39) binary_expression -> . unary_expression
    (40) binary_expression -> . binary_expression PLUS unary_expression
    (41) binary_expression -> . binary_expression MINUS unary_expression
    (42) binary_expression -> . binary_expression TIMES unary_expression
    (43) binary_expression -> . binary_expression DIVIDE unary_expression
    (44) binary_expression -> . binary_expression MOD unary_expression
    (45) binary_expression -> . binary_expression EQ unary_expression
    (46) binary_expression -> . binary_expression NE unary_expression
    (47) binary_expression -> . binary_expression LT unary_expression
    (48) binary_expression -> . binary_expression GT unary_expression
    (49) binary_expression -> . binary_expression LE unary_expression
    (50) binary_expression -> . binary_expression GE unary_expression
    (53) primary_expression -> . literal
    (54) primary_expression -> . ID
    (55) primary_expression -> . call
    (56) primary_expression -> . group
    (57) primary_expression -> . list_literal
    (71) list_literal -> . LBRACKET list_items RBRACKET
    (51) unary_expression -> . primary_expression
    (52) unary_expression -> . MINUS unary_expression
    (58) literal -> . NUMBER
    (59) literal -> . STRING
    (61) call -> . ID LPAREN arguments RPAREN
    (62) call -> . ID LPAREN RPAREN
    (60) group -> . LPAREN expression RPAREN

    STRING          shift and go to state 20
    NUMBER          shift and go to state 23
    FSTRING         shift and go to state 24
    ID              shift and go to state 36
    LBRACKET        shift and go to state 29
    MINUS           shift and go to state 26
    LPAREN          shift and go to state 17

    expression                     shift and go to state 35
    binary_expression              shift and go to state 21
    primary_expression             shift and go to state 22
    list_literal                   shift and go to state 18
    unary_expression               shift and go to state 25
    literal                        shift and go to state 27
    call                           shift and go to state 37
    group                          shift and go to state 28

state 18

    (37) expression -> list_literal .
    (57) primary_expression -> list_literal .

  ! reduce/reduce conflict for NEWLINE resolved using rule 37 (expression -> list_literal .)
  ! reduce/reduce conflict for RPAREN resolved using rule 37 (expression -> list_literal .)
  ! reduce/reduce conflict for COLON resolved using rule 37 (expression -> list_literal .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 37 (expression -> list_literal .)
  ! reduce/reduce conflict for COMMA resolved using rule 37 (expression -> list_literal .)
    NEWLINE         reduce using rule 37 (expression -> list_literal .)
    RPAREN          reduce using rule 37 (expression -> list_literal .)
    COLON           reduce using rule 37 (expression -> list_literal .)
    RBRACKET        reduce using rule 37 (expression -> list_literal .)
    COMMA           reduce using rule 37 (expression -> list_literal .)
    PLUS            reduce using rule 57 (primary_expression -> list_literal .)
    MINUS           reduce using rule 57 (primary_expression -> list_literal .)
    TIMES           reduce using rule 57 (primary_expression -> list_literal .)
    DIVIDE          reduce using rule 57 (primary_expression -> list_literal .)
    MOD             reduce using rule 57 (primary_expression -> list_literal .)
    EQ              reduce using rule 57 (primary_expression -> list_literal .)
    NE              reduce using rule 57 (primary_expression -> list_literal .)
    LT              reduce using rule 57 (primary_expression -> list_literal .)
    GT              reduce using rule 57 (primary_expression -> list_literal .)
    LE              reduce using rule 57 (primary_expression -> list_literal .)
    GE              reduce using rule 57 (primary_expression -> list_literal .)

  ! NEWLINE         [ reduce using rule 57 (primary_expression -> list_literal .) ]
  ! RPAREN          [ reduce using rule 57 (primary_expression -> list_literal .) ]
  ! COLON           [ reduce using rule 57 (primary_expression -> list_literal .) ]
  ! RBRACKET        [ reduce using rule 57 (primary_expression -> list_literal .) ]
  ! COMMA           [ reduce using rule 57 (primary_expression -> list_literal .) ]


state 19

    (16) return_statement -> KEYWORD . expression NEWLINE
    (17) return_statement -> KEYWORD . NEWLINE
    (22) function_def -> KEYWORD . ID LPAREN parameter_list RPAREN return_type COLON NEWLINE INDENT statement_list DEDENT
    (23) function_def -> KEYWORD . ID LPAREN parameter_list RPAREN return_type NEWLINE INDENT statement_list DEDENT
    (75) function_def -> KEYWORD . ID LPAREN parameter_list RPAREN return_type COLON NEWLINE statement_list
    (29) if_statement -> KEYWORD . expression COLON NEWLINE INDENT statement_list DEDENT
    (30) if_statement -> KEYWORD . expression COLON NEWLINE INDENT statement_list DEDENT KEYWORD COLON NEWLINE INDENT statement_list DEDENT
    (31) for_statement -> KEYWORD . ID KEYWORD expression COLON NEWLINE INDENT statement_list DEDENT
    (32) while_statement -> KEYWORD . expression COLON NEWLINE INDENT statement_list DEDENT
    (33) expression -> . STRING
    (34) expression -> . binary_expression
    (35) expression -> . primary_expression
    (36) expression -> . NUMBER
    (37) expression -> . list_literal
    (38) expression -> . FSTRING
    (39) binary_expression -> . unary_expression
    (40) binary_expression -> . binary_expression PLUS unary_expression
    (41) binary_expression -> . binary_expression MINUS unary_expression
    (42) binary_expression -> . binary_expression TIMES unary_expression
    (43) binary_expression -> . binary_expression DIVIDE unary_expression
    (44) binary_expression -> . binary_expression MOD unary_expression
    (45) binary_expression -> . binary_expression EQ unary_expression
    (46) binary_expression -> . binary_expression NE unary_expression
    (47) binary_expression -> . binary_expression LT unary_expression
    (48) binary_expression -> . binary_expression GT unary_expression
    (49) binary_expression -> . binary_expression LE unary_expression
    (50) binary_expression -> . binary_expression GE unary_expression
    (53) primary_expression -> . literal
    (54) primary_expression -> . ID
    (55) primary_expression -> . call
    (56) primary_expression -> . group
    (57) primary_expression -> . list_literal
    (71) list_literal -> . LBRACKET list_items RBRACKET
    (51) unary_expression -> . primary_expression
    (52) unary_expression -> . MINUS unary_expression
    (58) literal -> . NUMBER
    (59) literal -> . STRING
    (61) call -> . ID LPAREN arguments RPAREN
    (62) call -> . ID LPAREN RPAREN
    (60) group -> . LPAREN expression RPAREN

    NEWLINE         shift and go to state 39
    ID              shift and go to state 40
    STRING          shift and go to state 20
    NUMBER          shift and go to state 23
    FSTRING         shift and go to state 24
    LBRACKET        shift and go to state 29
    MINUS           shift and go to state 26
    LPAREN          shift and go to state 17

    expression                     shift and go to state 38
    binary_expression              shift and go to state 21
    primary_expression             shift and go to state 22
    list_literal                   shift and go to state 18
    unary_expression               shift and go to state 25
    literal                        shift and go to state 27
    call                           shift and go to state 37
    group                          shift and go to state 28

state 20

    (33) expression -> STRING .
    (59) literal -> STRING .
